apps/pterodactyl/panel/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pterodactyl-panel
  namespace: prod
  labels:
    app: pterodactyl-panel
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pterodactyl-panel
  template:
    metadata:
      labels:
        app: pterodactyl-panel
    spec:
      containers:
        - name: panel
          image: ghcr.io/pterodactyl/panel:v1.11.11
          ports:
            - containerPort: 80
              name: http
          volumeMounts:
            - name: panel-var
              mountPath: /app/var/
            - name: panel-logs
              mountPath: /app/storage/logs
      volumes:
        - name: panel-var
          persistentVolumeClaim:
            claimName: pterodactyl-var
        - name: panel-logs
          emptyDir: {}
