apps/pterodactyl/panel/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pterodactyl-panel
  namespace: prod
spec:
  selector:
    app: pterodactyl-panel
  ports:
    - port: 80
      targetPort: 80
